Fixes for JDK 8; Better support for nested action classes; et. al..